Multiple-EC2-VPC/security_group.tf
resource "aws_security_group" "my_security" {
  name     = "AG-SG-POC"
  vpc_id   = aws_vpc.my_vpc.id

  ingress {
   from_port   = 22
   to_port     = 22
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
   from_port   = 80
   to_port     = 80
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
   from_port   = 8080
   to_port     = 8080
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
   from_port   = 0
   to_port     = 0
   protocol    = "-1"
   cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
   from_port   = 8081
   to_port     = 8081
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
  }

 egress {
   from_port   = 0
   to_port     = 0
   protocol    = "-1"
   cidr_blocks = ["0.0.0.0/0"]
  }
 }
